# nosuch_texture

./: .gitignore  CMakeLists.txt
.github/workflows/: release.yaml
NT/: Makefile  beads_plugin.cpp
beads_dsp/: CMakeLists.txt
beads_dsp/include/beads/: beads.h  parameters.h  types.h
beads_dsp/src/: beads_processor.cpp  beads_processor.h
beads_dsp/src/buffer/: recording_buffer.cpp  recording_buffer.h
beads_dsp/src/delay/: delay_engine.cpp  delay_engine.h
beads_dsp/src/fx/: fx_engine.h  reverb.cpp  reverb.h  saturation.cpp  saturation.h
beads_dsp/src/grain/: grain.cpp  grain.h  grain_engine.cpp  grain_engine.h  grain_scheduler.cpp  grain_scheduler.h
beads_dsp/src/input/: auto_gain.cpp  auto_gain.h
beads_dsp/src/pitch/: pitch_quantizer.cpp
beads_dsp/src/quality/: quality_processor.cpp  quality_processor.h
beads_dsp/src/random/: attenurandomizer.cpp  attenurandomizer.h  random.cpp  random.h
beads_dsp/src/util/: cosine_table.h  dsp_utils.h  interpolation.h  svf.h
beads_dsp/src/wavetable/: wavetable_oscillator.cpp  wavetable_oscillator.h
tests/: CMakeLists.txt  test_attenurandomizer.cpp  test_auto_gain.cpp  test_buffer.cpp  test_click_prevention.cpp  test_delay.cpp  test_grain.cpp  test_main.cpp  test_processor.cpp  test_quality_modes.cpp  test_reverb.cpp  test_silence.cpp
